--- a/Escritorio/fullCloud/index.html
+++ b/Escritorio/fullCloud/index.html
@@ -10,9 +10,9 @@
   <body>
     <!-- header -->
     <header>
-      <div class="container-principal">
+      <div class="container-header">
       <header class="cabecera-principal">
-        <h1 class="logo">fullCloud</h1>
+        <img class="logo" src="imagenes/logo_fullCloud.JPG" alt="fullCloud">
         <ul class="header">
           <li><a href="#">Porque nosotros</a></li>
           <li><a href="#">Proyectos</a></li>
